--- a/src/typinggame/ApiPortal.form
+++ b/src/typinggame/ApiPortal.form
@@ -34,12 +34,12 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace pref="61" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="2" attributes="0">
+                          <Group type="102" attributes="0">
                               <Component id="jLabel2" linkSize="1" min="-2" pref="68" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="nameLabel" linkSize="1" min="-2" pref="48" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="2" attributes="0">
+                          <Group type="102" attributes="0">
                               <Component id="jLabel3" linkSize="1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="21" max="32767" attributes="0"/>
                               <Component id="passwordLabel" linkSize="1" min="-2" pref="56" max="-2" attributes="0"/>
@@ -51,8 +51,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="errorBox" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="registerButton" linkSize="3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="loginButton" linkSize="3" min="-2" max="-2" attributes="0"/>
@@ -80,11 +80,12 @@
               </Group>
               <EmptySpace pref="34" max="32767" attributes="0"/>
               <Component id="errorBox" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="registerButton" linkSize="4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="loginButton" linkSize="4" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -93,7 +94,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="CHANGE API PORTAL"/>
+        <Property name="text" type="java.lang.String" value="API PORTAL"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
